@@ -72,8 +72,12 @@ class gSocket : public sigc::trackable
 
         gSocket();
         ~gSocket();
-
+		
+#ifdef USING_GIO_NETWORK
+		bool connect2(Glib::ustring host, int p = 5154);
+#else
         bool connect(Glib::ustring host, int p = 5154);
+#endif
         bool join(Glib::ustring callsign, Glib::ustring password, Glib::ustring motto);
         void disconnect();
         int send(guint16 code, guint16 len, const void* msg);
@@ -146,7 +150,11 @@ class gSocket : public sigc::trackable
         int select(int _fd, int blockTime);
         int select_write(int _fd, int blockTime);
         int check_status(int status_code);
+#ifdef USING_GIO_NETWORK
+        Glib::ustring get_ip_str2(const Glib::RefPtr<Gio::SocketAddress>& address);
+#else
         Glib::ustring get_ip_str(const struct addrinfo *ai);
+#endif
         void* get_in_addr(struct sockaddr *sa);
         bool check_server_version(int _sockfd);
         bool get_my_id(int _sockfd, unsigned char& _id);
@@ -162,10 +170,19 @@ class gSocket : public sigc::trackable
         struct addrinfo server_info;
         bool netStats;
         float prev_flow;
-
         unsigned char id;
         Glib::ustring version;
-        
+#ifdef USING_GIO_NETWORK
+		Glib::RefPtr<Gio::Socket> socket;
+//		Glib::RefPtr<Gio::SocketAddress> src_address;
+		Glib::RefPtr<Gio::SocketAddress> address;
+//		Gio::SocketType socket_type;
+		GError *error = NULL;
+//		GOptionContext *context;
+//		Glib::RefPtr<Gio::Cancellable> cancellable;
+		Glib::RefPtr<Gio::SocketAddressEnumerator> enumerator;
+		Glib::RefPtr<Gio::SocketConnectable> connectable;
+#endif
         Glib::ustring token;
         bool prefetch_token;
         bool blocking;
